# cargo-semver-bump

./: Cargo.toml
src/: conventional_commit.rs  main.rs  version_update_handler.rs
